--- a/proc_slide/test.html
+++ b/proc_slide/test.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <script type="text/javascript" src="js.class.min.js"></script>
+    <script type="text/javascript" src="base.js"></script>
+    <script type="text/javascript" src="tween.js"></script>
     <script type="text/javascript" src="processing.js"></script>
     <!-- <script type="text/javascript" src="paper.js"></script> -->
     <!-- <script type="text/paperscript" src="test-paper.js" canvas="main"></script> -->
@@ -9,7 +12,7 @@
   </head>
   <body>
     <div>
-      <canvas data-processing-sources="test-processing.pjs"></canvas>
+      <canvas id="sketch" data-processing-sources="test-processing.pjs"></canvas>
       <!-- <canvas id="main" resize="true"></canvas> -->
     </div>
   </body>
