Quite a bit more work on the slides thingy.

--- a/proc_slide/test.html
+++ b/proc_slide/test.html
@@ -3,9 +3,9 @@
     <script type="text/javascript" src="js.class.min.js"></script>
     <script type="text/javascript" src="base.js"></script>
     <script type="text/javascript" src="tween.js"></script>
+    <script type="text/javascript" src="lists.js"></script>
     <script type="text/javascript" src="processing.js"></script>
-    <!-- <script type="text/javascript" src="paper.js"></script> -->
-    <!-- <script type="text/paperscript" src="test-paper.js" canvas="main"></script> -->
+    <script type="text/javascript" src="jprocessingjs-0.9.min.js"></script>
     <style>
       body { margin: 0; padding: 0; }
     </style>
@@ -13,7 +13,6 @@
   <body>
     <div>
       <canvas id="sketch" data-processing-sources="test-processing.pjs"></canvas>
-      <!-- <canvas id="main" resize="true"></canvas> -->
     </div>
   </body>
 </html>
