More work on the shell scripting tutorial.

--- a/proc_slide/test.html
+++ b/proc_slide/test.html
@@ -4,8 +4,11 @@
     <script type="text/javascript" src="base.js"></script>
     <script type="text/javascript" src="tween.js"></script>
     <script type="text/javascript" src="lists.js"></script>
+    <script type="text/javascript" src="terminal.js"></script>
     <script type="text/javascript" src="processing.js"></script>
+    <script type="text/javascript" src="helpers.js"></script>
     <script type="text/javascript" src="jprocessingjs-0.9.min.js"></script>
+    <script type="text/javascript" src="history.js"></script>
     <style>
       body { margin: 0; padding: 0; }
     </style>
