--- a/MelbDjango/channels-heroku-cq/index.html
+++ b/MelbDjango/channels-heroku-cq/index.html
@@ -1502,7 +1502,7 @@ heroku config:set WEB_PROCESSES=3 \
 	      <h2><span class="orange">django-cq</span></h2>
             </div>
             <div class="fill vcenter">
-              <a  href="http://github.com/django/channels">http://github.com/furious-luke/django-cq</a>
+              <a  href="http://github.com/furious-luke/django-cq">http://github.com/furious-luke/django-cq</a>
             </div>
           </div>
 
